# ai-db-agent

./: .env.example  README.md  pyproject.toml
ai-db-agent/: run.py
data/: init.sql
